@@ -1,6 +1,6 @@
 AC_DEFUN([BANSHEE_CHECK_GTK_SHARP],
 [
-	GTKSHARP_REQUIRED=2.8
+	GTKSHARP_REQUIRED=2.10
 
 	PKG_CHECK_MODULES(GTKSHARP,
 		gtk-sharp-2.0 >= $GTKSHARP_REQUIRED \
@@ -10,10 +10,6 @@ AC_DEFUN([BANSHEE_CHECK_GTK_SHARP],
 	PKG_CHECK_MODULES(GLIBSHARP,
 		glib-sharp-2.0 >= $GTKSHARP_REQUIRED)
 	AC_SUBST(GLIBSHARP_LIBS)
-
-	PKG_CHECK_MODULES(GTKSHARP_VERSION, gtk-sharp-2.0 >= 2.10, 
-        HAVE_GTK_2_10=yes, HAVE_GTK_2_10=no)
-	AC_SUBST(HAVE_GTK_2_10)
 
 	PKG_CHECK_MODULES(GCONFSHARP,
 		gconf-sharp-2.0 >= $GTKSHARP_REQUIRED)
